# SASSScope

./: .gitignore  CMakeLists.txt  README.md
docs/: 001_4_2_4_linear_sass_observation.md  error_checklist.md  exp002_4_2_bias_relu_variants.md  file_generation_process.md  process.md  실험과정_exp02기준.md
experiments/exp001_4_2_4_fused_vs_split/include/: kernels.cuh
experiments/exp001_4_2_4_fused_vs_split/results/: ptx.txt  sass.txt
experiments/exp001_4_2_4_fused_vs_split/src/: kernels.cu  main.cu
experiments/exp002_4_2_bias_relu_variants/: README.md
experiments/exp002_4_2_bias_relu_variants/include/: kernels.cuh
experiments/exp002_4_2_bias_relu_variants/results/: ptx.txt  resource_usage.txt  sass.txt
experiments/exp002_4_2_bias_relu_variants/src/: kernels.cu  main.cu
include/: probe_kernels.cuh
results/binary/: binary_collection_manifest.json  probe_ffma.ptx.txt  probe_ffma_detailed.sass.txt  probe_ffma_filtered.sass.txt  probe_ffma_full.sass.txt  probe_ffma_lineinfo.sass.txt  probe_ffma_reference_full.sass.txt  probe_ffma_resource_usage.txt  probe_ffma_runtime_elf_extract_console.txt  probe_ffma_runtime_elf_list.txt  runtime_cubin_selection.json  sass_analyzer_console.txt  sass_summary.json  sass_summary.txt
results/binary/reference_analysis/: probe_ffma_filtered.sass.txt  sass_analyzer_console.txt  sass_summary.json  sass_summary.txt
results/binary/runtime_candidate_inspection/: main-probe_kernels.sm_86.sass.txt  main.sm_86.sass.txt  probe_kernels.sm_86.sass.txt
results/environment/: cuobjdump_version.txt  gpu_environment.txt  nvcc_version.txt  nvdisasm_version.txt
results/profiler/: ncu_collect_console.txt  probe_ffma_ncu_raw.csv  probe_ffma_ncu_sass.txt  probe_ffma_profile.ncu-rep  raw_export.csv
results/profiler/captures/probe_timer_only/basic/: active_metrics.txt  capture_console.txt  capture_manifest.json  details.csv  details.txt  profile.ncu-rep  raw.csv  session.txt  source_cuda_sass.csv  source_cuda_sass.txt  source_sass.csv  source_sass.txt
results/profiler/captures/probe_timer_only/basic/runtime/: metadata.json
results/profiler/captures/probe_timer_only/source/: active_metrics.txt  canonical_sass_lineinfo.txt  capture_console.txt  capture_manifest.json  details.csv  details.txt  profile.ncu-rep  raw.csv  sass_instruction_analyzer_console.txt  sass_instructions.csv  sass_instructions.json  sass_instructions.txt  session.txt  source_cuda_sass.csv  source_cuda_sass.txt  source_sass.csv  source_sass.txt
results/profiler/captures/probe_timer_only/source/runtime/: metadata.json  runtime_raw.csv  runtime_summary.txt
results/profiler/environment/: gpu_info.txt  ncu_help.txt  ncu_metrics.txt  ncu_sections.txt  ncu_sets.txt  ncu_version.txt
results/profiler/runtime/: metadata.json  runtime_raw.csv  runtime_summary.txt
results/runtime/: metadata.json  runtime_analyzer_console.txt  runtime_check.txt  runtime_console.txt  runtime_raw.csv  runtime_run_manifest.json  runtime_summary.txt
scripts/: build.ps1  check_env.ps1  check_tools.ps1  collect_binary_outputs.ps1  common.ps1  dump_ptx.ps1  dump_resource_usage.ps1  dump_sass.ps1  profile_ncu.ps1  run.ps1  run_all.ps1  run_probe.ps1
src/: main.cu  probe_kernels.cu  probes.cu
tools/: analyze_runtime.py  analyze_sass.py  extract_sass_listing.py
